fixed service banner section and quiz car
Banner section was sketchy and had too many styles. Overlapping quiz car

--- a/app/globals.css
+++ b/app/globals.css
@@ -28,10 +28,10 @@
 }
 
 
-path {
+.drawPath {
   stroke-dasharray: 400%;
   stroke-dashoffset: 400%;
-  animation: draw 4.5s ease-in-out forwards;
+  animation: draw 6s ease-out forwards;
 }
 
 .drawShadow{
@@ -130,4 +130,11 @@ path {
     opacity: 1;
     scale: 1;
   }
+}
+
+.outline-title {
+  -webkit-text-stroke: 2px #F0B631;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
